--- a/src/partials/shoppingList.html
+++ b/src/partials/shoppingList.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container basket-container">
   <load src="/partials/charitableFunds.html" />
   <load src="/partials/basketShoppingList.html" />
 </section>
