--- a/src/css/basket.css
+++ b/src/css/basket.css
@@ -1,3 +1,38 @@
+.basket-container {
+  margin-top: 40px;
+  display: flex;
+}
+.basket-container .charity-slider {
+  display: none;
+}
+
+.background-container.none {
+  display: none;
+}
+
+.background-container {
+  margin-top: 140px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.empty-text {
+  letter-spacing: -0.02em;
+  text-align: center;
+  color: var(--empty-color);
+}
+
+.shList-container {
+  min-height: 752px;
+  min-width: 375px;
+  display: flex;
+  flex-direction: column;
+}
+
 .shList-title {
   margin-bottom: 40px;
 }
@@ -106,6 +141,16 @@
 }
 
 @media screen and (min-width: 768px) {
+  .shList-container {
+    min-height: 935px;
+    min-width: 768px;
+  }
+
+  .empty-text {
+    font-size: 18px;
+    line-height: 1.33;
+  }
+
   .basket-item {
     width: 704px;
     height: 213px;
@@ -144,6 +189,16 @@
 }
 
 @media screen and (min-width: 1422px) {
+  .shList-container {
+    margin-left: 40px;
+    min-height: 935px;
+    min-width: 1026px;
+  }
+
+  .basket-container .charity-slider {
+    display: flex;
+  }
+
   .basket-item {
     width: 996px;
   }
