--- a/src/css/charitableFunds.css
+++ b/src/css/charitableFunds.css
@@ -56,14 +56,17 @@
     margin: 0 auto;
     padding: 0;
     border: none;
-    transition: transform 300ms ease;
-    transform: rotate(0deg);
     background-color: var(--white-color);
-    transition: background-color 300ms linear;
+    transform: rotate(0deg);
+    transition: transform 300ms ease, box-shadow 300ms linear;
 }
 
 .charity-btn:active {
     background-color: var(--violet-color);
+}
+
+.charity-btn:hover {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.77);
 }
 
 .charity-btn-icon {
@@ -108,22 +111,6 @@
     .charity-btn-icon {
         width: 22px;
         height: 22px;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .container {
-        max-width: 1024px;
-        padding: 0 15px;
-    }
-   
-    .charity-btn:hover {
-        background-color: var(--violet-color);
-        pointer-events: none;
-    }
-    
-    .charity-btn:hover .charity-btn-icon {
-        fill: var(--white-color);
     }
 }
 
