--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,6 +13,7 @@
 @import url('./shopListLinks.css');
 @import url('./navCategriesList.css');
 @import url('./gallary.css');
+@import url('./scrollButton.css');
 
 :root {
   font-synthesis: none;
