--- a/src/partials/basketShoppingList.html
+++ b/src/partials/basketShoppingList.html
@@ -1,4 +1,4 @@
-<button class="test">start</button>
+<button class="js-test">start</button>
 <div class="shList-container shList-image">
   <h1 class="title shList-title">Shopping <span>List</span></h1>
   <div class="background-container none js-background-container">
@@ -23,5 +23,5 @@
     </picture>
   </div>
 
-  <ul class="basket-list"></ul>
+  <ul class="basket-list js-basket-list"></ul>
 </div>
