--- a/src/partials/burgerMobile.html
+++ b/src/partials/burgerMobile.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="../css/burger.css" />
+<link rel="stylesheet" href="../css/burgerMenu.css" />
 <div class="burger-wraper is-open">
-  <div class="burger-header light">
+  <!-- <div class="burger-header light">
     <a href=""
       ><img
         class="burger-boohshelf-logo"
@@ -15,11 +15,11 @@
       </label>
       <button class="burger-x-button" type="button"></button>
     </div>
-  </div>
+  </div> -->
   <div class="burger-body">
-    <ul>
-      <li>Home</li>
-      <li>Shopping list</li>
+    <ul class="burger-list">
+      <li class="burger-list-ithem"><a>Home</a></li>
+      <li class="burger-list-ithem"><a>Shopping list</a></li>
     </ul>
   </div>
 </div>
