--- a/src/partials/shop.html
+++ b/src/partials/shop.html
@@ -1,8 +1,10 @@
 <main class="container shop-container">
   <div class="shop-navigation">
     <ul class="shop-navigation-list" id="listContainer">
-      <li class="allCategories">
-        <button data-category="All categories">All categories</button>
+      <li class="item-category">
+        <button class="active" data-category="All categories">
+          All categories
+        </button>
       </li>
     </ul>
     <load src="/partials/charitableFunds.html" />
