--- a/src/css/header.css
+++ b/src/css/header.css
@@ -53,6 +53,7 @@
   z-index: 10;
   display: flex;
   text-align: center;
+  align-items: center;
   justify-content: space-between;
   padding: 16px;
   border: 1.5px solid var(--main-fount-color);
