--- a/src/partials/burgerMobile.html
+++ b/src/partials/burgerMobile.html
@@ -1,25 +1,16 @@
 <link rel="stylesheet" href="../css/burgerMenu.css" />
 <div class="burger-wraper is-open">
-  <!-- <div class="burger-header light">
-    <a href=""
-      ><img
-        class="burger-boohshelf-logo"
-        src="../img/boohshelf_logo.svg"
-        alt="boohshelf_logo" />
-      <div class="burger-boohshelf"></div
-    ></a>
-    <div class="burger-chexbox-container">
-      <label class="burger-switch">
-        <input type="checkbox" class="burger-input" />
-        <span class="burger-slider"></span>
-      </label>
-      <button class="burger-x-button" type="button"></button>
-    </div>
-  </div> -->
   <div class="burger-body">
     <ul class="burger-list">
-      <li class="burger-list-ithem"><a>Home</a></li>
-      <li class="burger-list-ithem"><a>Shopping list</a></li>
+      <li class="burger-list-home"><a href="../index.html">Home</a></li>
+      <li class="burger-list-shoplist">
+        <a href="../shopListPage.html"
+          >Shopping list
+          <svg class="burger-icon">
+            <use href="../img/icons.svg#uil-cart"></use>
+          </svg>
+        </a>
+      </li>
     </ul>
   </div>
 </div>
