--- a/src/css/burgerMenu.css
+++ b/src/css/burgerMenu.css
@@ -11,86 +11,56 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
+  justify-content: center;
 }
 
-.burger-header {
-  border: 1.5px solid #111;
-  border-radius: 0 0 8px 8px;
-  width: 100%;
-  height: 64px;
-  background: #fff;
-  padding: 16px;
-  display: flex;
-  flex-direction: row;
-}
 .burger-body {
-  width: 100%;
-  height: 100%;
+  display: block;
+  margin: 0 auto;
+  margin-top: 250px;
+  box-sizing: content-box;
+  padding: 0;
+  width: 118px;
+  height: 70px;
 }
 
-.burger-switch {
-  position: relative;
-  display: inline-block;
-  width: 40px;
-  height: 24px;
+.burger-list {
+}
+.burger-list-home {
+  border-radius: 36px;
+  padding: 8px 16px;
+  width: 72px;
+  height: 34px;
+  background-color: var(--gold-color);
+  margin-bottom: 16px;
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.28;
+  letter-spacing: -0.04em;
+  text-transform: uppercase;
+  color: var(--dark-color);
+  display: block;
+  padding: 8px 16px;
 }
 
-.burger-switch .burger-input {
-  display: none;
+.burger-list-shoplist a {
+  display: flex;
+  align-items: center;
 }
 
-.burger-slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: linear-gradient(180deg, #4f2ee8 0%, #dcdcdc 100%);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  border-radius: 34px;
+.burger-list-shoplist {
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.28;
+  letter-spacing: -0.04em;
+  text-transform: uppercase;
+  color: var(--white-color);
 }
 
-.burger-slider:before {
-  position: absolute;
-  content: '';
-  height: 20px;
+.burger-icon {
   width: 20px;
-  left: 2px;
-  bottom: 2px;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  border-radius: 50%;
-}
-
-.burger-input:checked + .burger-slider {
-  background: linear-gradient(180deg, #4f2ee8 0%, #686868 100%);
-}
-
-.burger-input:focus + .burger-slider {
-  box-shadow: 0 0 1px #2196f3;
-}
-
-.burger-input:checked + .burger-slider:before {
-  -webkit-transform: translateX(16px);
-  -ms-transform: translateX(16px);
-  transform: translateX(16px);
-}
-
-.burger-x-button {
-  width: 28px;
-  height: 28px;
-  background-image: url(../img/Icon_x.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  border: none;
-  background-color: inherit;
-}
-
-.burger-x-button:hover,
-.burger-x-button:focus,
-.burger-x-button:active {
-  background-image: url(../img/Icon_x_hover.svg);
+  height: 20px;
+  fill: var(--white-color);
 }
