--- a/src/partials/scrollButton.html
+++ b/src/partials/scrollButton.html
@@ -1,1 +1,5 @@
-<button></button>
+<button type="button" id="scrollUpButton">
+    <svg id="scrollUpButtonIcon" width="24" height="24">
+        <use href="../img/icons.svg#icon-arrow-back-ios"></use>
+    </svg>
+</button>
