--- a/src/css/scrollButton.css
+++ b/src/css/scrollButton.css
@@ -16,7 +16,7 @@
 }
 
 #scrollUpButton:hover {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.55);
+    box-shadow: 0 0 0 5px rgba(79, 46, 232, 0.3);
 }
 
 
