--- a/src/partials/burgerMobile.html
+++ b/src/partials/burgerMobile.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="../css/burgerMenu.css" />
-<div class="burger-wraper is-open">
+<div class="burger-wraper">
   <div class="burger-body">
     <ul class="burger-list">
       <li class="burger-list-home"><a href="../index.html">Home</a></li>
