--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,6 +15,8 @@
 @import url('./gallary.css');
 @import url('./scrollButton.css');
 
+@import url('./loader.css');
+
 :root {
   font-synthesis: none;
   text-rendering: optimizeLegibility;
