--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1,36 +1,168 @@
-.modal {
-  display: none;
+.modal-wrapper {
   position: fixed;
-  z-index: 1;
-  left: 0;
   top: 0;
+  left: 0;
+  z-index: 100;
+  overflow: scroll;
   width: 100%;
   height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(17, 17, 17, 0.4);
 }
 
-.modal-content {
-  background-color: #4f2ee8;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 356px;
-  height: 474px;
-  border-radius: 15px;
+.modal {
+  margin: 10px auto;
 }
 
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+.modal-container {
+  background-color: var(--background-color);
+  padding: 40px 20px;
+  border: 2px solid var(--title-color);
+  max-width: 335px;
+  border-radius: 18px;
+  position: relative;
 }
 
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
+@media screen and (min-width: 768px) {
+  .modal-container {
+    max-width: 579px;
+    padding: 40px;
+  }
+}
+
+.modal-image {
+  width: 100%;
+  height: auto;
+  margin-bottom: 20px;
+  border-radius: 8px;
+}
+
+@media screen and (min-width: 768px) {
+  .modal-image {
+    margin-bottom: 0;
+  }
+}
+
+.modal-image-title {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.13;
+  margin-top: 14px;
+}
+
+@media screen and (min-width: 768px) {
+  .modal-image-title {
+    margin-top: 0;
+    font-size: 24px;
+    line-height: 1.17;
+  }
+}
+
+.modal-image-description {
+  font-style: italic;
+  font-size: 12px;
+  line-height: 1.17;
+  color: var(--light-gray-color);
+  margin-top: 4px;
+}
+
+@media screen and (min-width: 768px) {
+  .modal-image-description {
+    font-size: 14px;
+    line-height: 1.29;
+    margin-top: 8px;
+  }
+}
+
+.modal-text {
+  margin-top: 18px;
+}
+
+@media screen and (min-width: 768px) {
+  .modal-text {
+    margin-top: 20px;
+  }
+}
+
+.modal-btn {
+  border: 2px solid #4f2ee8;
+  border-radius: 40px;
+  padding: 14px 28px;
+  width: 211px;
+  height: 46px;
+  background-color: transparent;
+  display: block;
+  margin: 0 auto;
+  white-space: nowrap;
+  margin-top: 44px;
+  color: var(--title-color);
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+@media screen and (min-width: 768px) {
+  .modal-btn {
+    width: 100%;
+    margin-top: 40px;
+  }
+}
+
+.icon-close {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  width: 24px;
+  height: 24px;
   cursor: pointer;
+  stroke: var(--main-fount-color);
+  transition: stroke 0.3s ease;
+}
+
+@media screen and (min-width: 768px) {
+  .icon-close {
+    top: 24px;
+    right: 24px;
+    width: 28px;
+    height: 28px;
+  }
+}
+
+.icon-close:hover,
+.icon-close:focus {
+  stroke: var(--violet-color);
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: var(--violet-color);
+  color: var(--white-color);
+}
+
+.modal-congratulation {
+  text-align: center;
+  margin: 8px auto 0;
+  width: 242px;
+  font-size: 10px;
+  line-height: 1.2;
+  color: var(--modal-gray);
+}
+
+@media screen and (min-width: 768px) {
+  .modal-congratulation {
+    width: 324px;
+    font-size: 12px;
+    line-height: 1.17;
+  }
+}
+
+.modal-congratulation.hidden {
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .modal-box {
+    display: flex;
+    gap: 24px;
+  }
+  .modal-content {
+    max-width: 279px;
+  }
 }
