--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -7,6 +7,13 @@
   width: 100%;
   height: 100%;
   background-color: rgba(17, 17, 17, 0.4);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+}
+.modal-wrapper.is-open {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .modal {
