--- a/src/css/header.css
+++ b/src/css/header.css
@@ -56,6 +56,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 16px;
+  background-color:var(--item-background-color);
   border: 1.5px solid var(--main-fount-color);
   border-radius: 0 0 8px 8px;
 }
