--- a/src/css/loader.css
+++ b/src/css/loader.css
@@ -26,12 +26,12 @@
   border-radius: 8px;
   background: #f5f5f5 no-repeat;
   background-size: 60px 10px;
-  background-image: linear-gradient(#ddd 100px, transparent 0),
-    linear-gradient(#ddd 100px, transparent 0),
-    linear-gradient(#ddd 100px, transparent 0),
-    linear-gradient(#ddd 100px, transparent 0),
-    linear-gradient(#ddd 100px, transparent 0),
-    linear-gradient(#ddd 100px, transparent 0);
+  background-image: linear-gradient(var(--hover-color) 100px, transparent 0),
+    linear-gradient(var(--hover-color) 100px, transparent 0),
+    linear-gradient(var(--hover-color) 100px, transparent 0),
+    linear-gradient(var(--hover-color) 100px, transparent 0),
+    linear-gradient(var(--hover-color) 100px, transparent 0),
+    linear-gradient(var(--hover-color) 100px, transparent 0);
 
   background-position: 15px 30px, 15px 60px, 15px 90px, 105px 30px, 105px 60px,
     105px 90px;
@@ -47,9 +47,9 @@
   border-radius: 8px;
   background: #fff no-repeat;
   background-size: 60px 10px;
-  background-image: linear-gradient(#ddd 100px, transparent 0),
-    linear-gradient(#ddd 100px, transparent 0),
-    linear-gradient(#ddd 100px, transparent 0);
+  background-image: linear-gradient(var(--hover-color) 100px, transparent 0),
+    linear-gradient(var(--hover-color) 100px, transparent 0),
+    linear-gradient(var(--hover-color) 100px, transparent 0);
   background-position: 50% 30px, 50% 60px, 50% 90px;
   transform: rotateY(0deg);
   transform-origin: left center;
