add show modal functions

--- a/src/partials/bookModal.html
+++ b/src/partials/bookModal.html
@@ -1,28 +1,36 @@
-<div class="modal-wrapper">
+<div class="modal-wrapper js-modal-wrapper">
     <div class="modal modal-container">
         <svg class="icon-close" width="24" height="24">
             <use href="../img/icons.svg#icon-x-close"></use>
         </svg>
         <div class="modal-box">
-            <img src="https://storage.googleapis.com/du-prd/books/images/9780670785933.jpg" alt="" class="modal-image">
+            <img class="js-modal-img" src="https://storage.googleapis.com/du-prd/books/images/9780670785933.jpg" alt="" class="modal-image">
             <div class="modal-content">
-                <h2 class="modal-image-title">HELLO BEAUTIFUL</h2>
-                <p class="modal-image-description">Ann Napolitano</p>
-                <p class="modal-text">In a homage to Louisa May Alcott’s “Little Women,” a young man’s dark past
+                <h2 class="modal-image-title js-modal-title">HELLO BEAUTIFUL</h2>
+                <p class="modal-image-description js-modal-description">Ann Napolitano</p>
+                <p class="modal-text js-modal-text">In a homage to Louisa May Alcott’s “Little Women,” a young man’s dark past
                     resurfaces
                     as
                     he
                     gets to know the family
                     of his college sweetheart.</p>
-                <div class="modal-links-icon">
+                <div class="modal-links-icon js-modal-links-icon">
                 </div>
             </div>
         </div>
-        <button class="modal-btn">ADD TO SHOPPING LIST</button>
-        <p class="modal-congratulation hidden">Сongratulations! You have added the book to the shopping list. To
+        <button class="modal-btn js-modal-btn">ADD TO SHOPPING LIST</button>
+        <p class="modal-congratulation js-modal-congratulation hidden">Сongratulations! You have added the book to the shopping list. To
             delete,
             press the button “Remove from the
             shopping
             list”.</p>
     </div>
 </div>
+js-modal-wrapper
+js-modal-img
+js-modal-title
+js-modal-description
+js-modal-text
+js-modal-links-icon
+js-modal-btn
+js-modal-congratulation
