complete modal logic

--- a/src/partials/bookModal.html
+++ b/src/partials/bookModal.html
@@ -1,6 +1,6 @@
 <div class="modal-wrapper js-modal-wrapper">
     <div class="modal modal-container">
-        <svg class="icon-close" width="24" height="24">
+        <svg class="icon-close js-icon-close" width="24" height="24">
             <use href="../img/icons.svg#icon-x-close"></use>
         </svg>
         <div class="modal-box">
@@ -26,11 +26,3 @@
             list”.</p>
     </div>
 </div>
-js-modal-wrapper
-js-modal-img
-js-modal-title
-js-modal-description
-js-modal-text
-js-modal-links-icon
-js-modal-btn
-js-modal-congratulation
