--- a/src/css/header.css
+++ b/src/css/header.css
@@ -48,6 +48,7 @@
 /* header */
 .header-container {
   max-width: 375px;
+  margin: 0 auto;
   overflow: hidden;
   position: relative;
   z-index: 10;
@@ -108,6 +109,7 @@
 }
 @media screen and (min-width: 768px) {
   .header-container {
+    max-width: 768px;
     padding: 19px 32px;
   }
   .header-navigation {
@@ -116,26 +118,27 @@
   }
   .header-navigation-list {
     display: flex;
-    gap: 16px;
   }
   .header-cart-icon {
-    stroke: var(--main-fount-color);
+    fill: var(--main-fount-color);
   }
   .header-navigation-item {
+    display: flex;
+    align-items: center;
     text-transform: uppercase;
-    padding: 8px 0;
+    padding: 8px 16px;
+    border-radius: 36px;
   }
   .header-navigation-item a {
     display: flex;
     align-items: center;
     gap: 4px;
   }
-  .header-navigation-item:first-child {
+  .header-navigation-item.active {
     color: var(--dark-color);
-    padding: 8px 16px;
-    border-radius: 36px;
     background-color: var(--gold-color);
   }
+
   .header-open-icon,
   .header-close-icon {
     display: none;
@@ -143,6 +146,7 @@
 }
 @media screen and (min-width: 1422px) {
   .header-container {
+    max-width: 1422px;
     padding: 19px 24px;
   }
   .header-navigation-list {
