--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,6 +1,6 @@
 :root {
   --gold-color: #eac645;
-  --violet-color: rgb(79, 46, 232);
+  --violet-color: #4f2ee8;
   --gray-color: #202024;
   --light-gray-color: #b4afaf;
   --dark-color: #111111;
