--- a/src/partials/shop.html
+++ b/src/partials/shop.html
@@ -2,9 +2,7 @@
   <div class="shop-navigation">
     <ul class="shop-navigation-list" id="listContainer">
       <li class="item-category">
-        <button class="active" data-category="All categories">
-          All categories
-        </button>
+        <button data-category="All categories">All categories</button>
       </li>
     </ul>
     <load src="/partials/charitableFunds.html" />
