--- a/src/partials/charitableFunds.html
+++ b/src/partials/charitableFunds.html
@@ -2,7 +2,7 @@
   <h2 class="charity-title">
     Support Ukraine
     <svg class="charity-logo" width="20" height="32">
-      <use href="../img/icons.svg#icon-gerb"></use>
+      <use href="./img/icons.svg#icon-gerb"></use>
     </svg>
   </h2>
   <div class="charity-container">
@@ -16,9 +16,9 @@
           rel="noopener noreferrer"
         >
           <img
-            srcset="../img/save_x1.png 1x, ../img/save_x2.png 2x"
+            srcset="./img/save_x1.png 1x, ./img/save_x2.png 2x"
             class="charity-logo"
-            src="../img/save_x1.png"
+            src="./img/save_x1.png"
             alt="Save the Chidren"
             width="129"
             height="32"
@@ -34,9 +34,9 @@
           rel="noopener noreferrer"
         >
           <img
-            srcset="../img/hope_x1.png 1x, ../img/hope_x2.png 2x"
+            srcset="./img/hope_x1.png 1x, ./img/hope_x2.png 2x"
             class="charity-logo"
-            src="../img/hope_x1.png"
+            src="./img/hope_x1.png"
             alt="Project HOPE"
             width="62"
             height="32"
@@ -52,9 +52,9 @@
           rel="noopener noreferrer"
         >
           <img
-            srcset="../img/medical_x1.png 1x, ../img/medical_x2.png 2x"
+            srcset="./img/medical_x1.png 1x, ./img/medical_x2.png 2x"
             class="charity-logo"
-            src="../img/medical_x1.png"
+            src="./img/medical_x1.png"
             alt="International Medical Corps"
             width="103"
             height="32"
@@ -70,9 +70,9 @@
           rel="noopener noreferrer"
         >
           <img
-            srcset="../img/razom_x1.png 1x, ../img/razom_x2.png 2x"
+            srcset="./img/razom_x1.png 1x, ./img/razom_x2.png 2x"
             class="charity-logo"
-            src="../img/razom_x1.png"
+            src="./img/razom_x1.png"
             alt="RAZOM"
             width="82"
             height="32"
@@ -88,9 +88,9 @@
           rel="noopener noreferrer"
         >
           <img
-            srcset="../img/action_x1.png 1x, ../img/action_x2.png 2x"
+            srcset="./img/action_x1.png 1x, ./img/action_x2.png 2x"
             class="charity-logo"
-            src="../img/action_x1.png"
+            src="./img/action_x1.png"
             alt="Action against hunger"
             width="55"
             height="32"
@@ -106,9 +106,9 @@
           rel="noopener noreferrer"
         >
           <img
-            srcset="../img/sergiy_x1.png 1x, ../img/sergiy_x2.png 2x"
+            srcset="./img/sergiy_x1.png 1x, ./img/sergiy_x2.png 2x"
             class="charity-logo"
-            src="../img/sergiy_x1.png"
+            src="./img/sergiy_x1.png"
             alt="Serhiy Prytula Charity Foundation"
             width="115"
             height="32"
@@ -124,9 +124,9 @@
           rel="noopener noreferrer"
         >
           <img
-            srcset="../img/medecins_x1.png 1x, ../img/medecins_x2.png 2x"
+            srcset="./img/medecins_x1.png 1x, ./img/medecins_x2.png 2x"
             class="charity-logo"
-            src="../img/medecins_x1.png"
+            src="./img/medecins_x1.png"
             alt="Medicins Sans Frontieres"
             width="94"
             height="32"
@@ -142,9 +142,9 @@
           rel="noopener noreferrer"
         >
           <img
-            srcset="../img/world_x1.png 1x, ../img/world_x2.png 2x"
+            srcset="./img/world_x1.png 1x, ./img/world_x2.png 2x"
             class="charity-logo"
-            src="../img/world_x1.png"
+            src="./img/world_x1.png"
             alt="World vision"
             width="81"
             height="32"
@@ -160,9 +160,9 @@
           rel="noopener noreferrer"
         >
           <img
-            srcset="../img/united_x1.png 1x, ../img/united_x2.png 2x"
+            srcset="./img/united_x1.png 1x, ./img/united_x2.png 2x"
             class="charity-logo"
-            src="../img/united_x1.png"
+            src="./img/united_x1.png"
             alt="UNITED24"
             width="114"
             height="32"
@@ -173,7 +173,7 @@
   </div>
   <button type="button" class="charity-btn">
     <svg class="charity-btn-icon" width="20" height="20">
-      <use href="../img/icons.svg#icon-angle-small-left"></use>
+      <use href="./img/icons.svg#icon-angle-small-left"></use>
     </svg>
   </button>
 </div>
