--- a/src/partials/scrollButton.html
+++ b/src/partials/scrollButton.html
@@ -1,5 +1,5 @@
 <button type="button" id="scrollUpButton">
     <svg id="scrollUpButtonIcon" width="24" height="24">
-        <use href="../img/icons.svg#icon-arrow-back-ios"></use>
+        <use href="./img/icons.svg#icon-arrow-back-ios"></use>
     </svg>
 </button>
