--- a/src/css/header.css
+++ b/src/css/header.css
@@ -134,7 +134,11 @@
     align-items: center;
     gap: 4px;
   }
-  .header-navigation-item.active {
+  .home .header-navigation-item:first-child {
+    color: var(--dark-color);
+    background-color: var(--gold-color);
+  }
+  .shop-list-page .header-navigation-item:nth-child(2) {
     color: var(--dark-color);
     background-color: var(--gold-color);
   }
