--- a/src/partials/burgerMobile.html
+++ b/src/partials/burgerMobile.html
@@ -2,9 +2,11 @@
 <div class="burger-wraper">
   <div class="burger-body">
     <ul class="burger-list">
-      <li class="burger-list-home"><a href="../index.html">Home</a></li>
-      <li class="burger-list-shoplist">
-        <a href="../shopListPage.html"
+      <li class="burger-list-ithem">
+        <a class="burger-list-link" href="../index.html">Home</a>
+      </li>
+      <li class="burger-list-ithem">
+        <a class="burger-list-link" href="../shopListPage.html"
           >Shopping list
           <svg class="burger-icon">
             <use href="../img/icons.svg#uil-cart"></use>
