--- a/src/css/burgerMenu.css
+++ b/src/css/burgerMenu.css
@@ -1,3 +1,5 @@
+/* CSS */
+
 .burger-wraper {
   background: url('../img/burger-books.png'),
     radial-gradient(
@@ -25,34 +27,17 @@
   margin-top: 250px;
   box-sizing: content-box;
   padding: 0;
-  width: 118px;
+  width: 160px;
   height: 70px;
 }
 
-.burger-list-home {
-  border-radius: 36px;
-  padding: 8px 16px;
-  width: 72px;
-  height: 34px;
-  background-color: var(--gold-color);
-  margin-bottom: 16px;
-  font-family: 'DM Sans', sans-serif;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.28571;
-  letter-spacing: -0.04em;
-  text-transform: uppercase;
-  color: var(--dark-color);
-  display: block;
-  padding: 8px 16px;
-}
-
-.burger-list-shoplist a {
+.burger-list {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  gap: 16px;
 }
 
-.burger-list-shoplist {
+.burger-list-ithem {
   font-family: 'DM Sans', sans-serif;
   font-weight: 500;
   font-size: 14px;
@@ -60,12 +45,13 @@
   letter-spacing: -0.04em;
   text-transform: uppercase;
   color: var(--white-color);
+  fill: var(--white-color);
 }
 
 .burger-icon {
-  width: 20px;
-  height: 20px;
-  fill: var(--white-color);
+  width: 16px;
+  height: 16px;
+  fill: inherit;
 }
 
 .menu-is-closed {
@@ -74,4 +60,21 @@
 
 .menu-is-open {
   right: 0;
+}
+
+/* Додано стиль для активного пункту меню */
+.burger-list-active {
+  border-radius: 36px;
+  padding: 8px 16px;
+  height: 36px;
+  width: fit-content;
+  background-color: var(--gold-color);
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.28571;
+  letter-spacing: -0.04em;
+  text-transform: uppercase;
+  color: var(--dark-color);
+  fill: var(--dark-color);
 }
