--- a/src/partials/basketShoppingList.html
+++ b/src/partials/basketShoppingList.html
@@ -5,7 +5,7 @@
       This page is empty, add some books and <br />
       proceed to order.
     </p>
-    <picture>
+    <picture class="books-picture">
       <source
         srcset="/img/books_mob.jpg.png"
         width="265"
