--- a/src/partials/bookModal.html
+++ b/src/partials/bookModal.html
@@ -1,27 +1,29 @@
 <div class="modal-wrapper js-modal-wrapper">
-    <div class="modal modal-container">
-        <div class="icon-close js-icon-close">
-        </div>
-        <div class="modal-box">
-            <img class="js-modal-img" src="https://storage.googleapis.com/du-prd/books/images/9780670785933.jpg" alt="" class="modal-image">
-            <div class="modal-content">
-                <h2 class="modal-image-title js-modal-title">HELLO BEAUTIFUL</h2>
-                <p class="modal-image-description js-modal-description">Ann Napolitano</p>
-                <p class="modal-text js-modal-text">In a homage to Louisa May Alcott’s “Little Women,” a young man’s dark past
-                    resurfaces
-                    as
-                    he
-                    gets to know the family
-                    of his college sweetheart.</p>
-                <div class="modal-links-icon js-modal-links-icon">
-                </div>
-            </div>
-        </div>
-        <button class="modal-btn js-modal-btn">ADD TO SHOPPING LIST</button>
-        <p class="modal-congratulation js-modal-congratulation hidden">Сongratulations! You have added the book to the shopping list. To
-            delete,
-            press the button “Remove from the
-            shopping
-            list”.</p>
+  <div class="modal modal-container">
+    <div class="icon-close js-icon-close"></div>
+    <div class="modal-box">
+      <img
+        class="js-modal-img"
+        src="https://storage.googleapis.com/du-prd/books/images/9780670785933.jpg"
+        alt=""
+      />
+      <div class="modal-content">
+        <h2 class="modal-image-title js-modal-title">HELLO BEAUTIFUL</h2>
+        <p class="modal-image-description js-modal-description">
+          Ann Napolitano
+        </p>
+        <p class="modal-text js-modal-text">
+          In a homage to Louisa May Alcott’s “Little Women,” a young man’s dark
+          past resurfaces as he gets to know the family of his college
+          sweetheart.
+        </p>
+        <div class="modal-links-icon js-modal-links-icon"></div>
+      </div>
     </div>
+    <button class="modal-btn js-modal-btn">ADD TO SHOPPING LIST</button>
+    <p class="modal-congratulation js-modal-congratulation hidden">
+      Сongratulations! You have added the book to the shopping list. To delete,
+      press the button “Remove from the shopping list”.
+    </p>
+  </div>
 </div>
