--- a/src/partials/burgerMobile.html
+++ b/src/partials/burgerMobile.html
@@ -2,13 +2,13 @@
   <div class="burger-body">
     <ul class="burger-list">
       <li class="burger-list-ithem">
-        <a class="burger-list-link" href="../index.html">Home</a>
+        <a class="burger-list-link" href="./">Home</a>
       </li>
       <li class="burger-list-ithem">
-        <a class="burger-list-link" href="../shopListPage.html"
+        <a class="burger-list-link" href="./shopListPage.html"
           >Shopping list
           <svg class="burger-icon">
-            <use href="../img/icons.svg#uil-cart"></use>
+            <use href="./img/icons.svg#uil-cart"></use>
           </svg>
         </a>
       </li>
