--- a/src/css/burgerMenu.css
+++ b/src/css/burgerMenu.css
@@ -34,21 +34,28 @@
 .burger-list {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   gap: 16px;
 }
 
-.burger-list-ithem {
-  font-family: 'DM Sans', sans-serif;
+.burger-list-item a {
+  border-radius: 36px;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.28571;
-  letter-spacing: -0.04em;
   text-transform: uppercase;
   color: var(--white-color);
   fill: var(--white-color);
   padding: 8px 16px;
 }
 
+.home .burger-list-item:first-child a {
+  color: var(--dark-color);
+  background-color: var(--gold-color);
+}
+.shop-list-page .burger-list-item:nth-child(2) a {
+  background-color: var(--gold-color);
+  color: var(--dark-color);
+  fill: var(--dark-color);
+}
 .burger-icon {
   width: 16px;
   height: 16px;
@@ -61,21 +68,4 @@
 
 .menu-is-open {
   right: 0;
-}
-
-/* Додано стиль для активного пункту меню */
-.burger-list-active {
-  border-radius: 36px;
-  padding: 8px 16px;
-  height: 36px;
-  width: fit-content;
-  background-color: var(--gold-color);
-  font-family: 'DM Sans', sans-serif;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.28571;
-  letter-spacing: -0.04em;
-  text-transform: uppercase;
-  color: var(--dark-color);
-  fill: var(--dark-color);
 }
