--- a/src/partials/burgerMobile.html
+++ b/src/partials/burgerMobile.html
@@ -1,10 +1,10 @@
 <div class="burger-wraper">
   <div class="burger-body">
     <ul class="burger-list">
-      <li class="burger-list-ithem">
+      <li class="burger-list-item">
         <a class="burger-list-link" href="./">Home</a>
       </li>
-      <li class="burger-list-ithem">
+      <li class="burger-list-item">
         <a class="burger-list-link" href="./shopListPage.html"
           >Shopping list
           <svg class="burger-icon">
