Started create pagination.js

--- a/src/partials/basketShoppingList.html
+++ b/src/partials/basketShoppingList.html
@@ -23,4 +23,6 @@
   </div>
 
   <ul class="basket-list js-basket-list"></ul>
+  <!-- Не забути видалити -->
+  <div id="pagination" class="tui-pagination"></div>
 </div>
