--- a/src/partials/burgerMobile.html
+++ b/src/partials/burgerMobile.html
@@ -1,6 +1,6 @@
 <div class="burger-wraper">
   <div class="burger-body">
-    <ul class="burger-list">
+    <ul class="burger-list js-burger-list">
       <li class="burger-list-item">
         <a class="burger-list-link" href="./">Home</a>
       </li>
