--- a/src/css/basket.css
+++ b/src/css/basket.css
@@ -1,5 +1,6 @@
 .basket-container {
-  margin-top: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   display: flex;
 }
 .basket-container .charity-slider {
