--- a/src/css/bookCart.css
+++ b/src/css/bookCart.css
@@ -2,4 +2,16 @@
 @import url('./reset.css');
 @import url('./header.css');
 @import url('./charitableFunds.css');
+@import url('./scrollButton.css');
 @import url('./basket.css');
+@import url('./loader.css');
+@import url('./burgerMenu.css');
+@import url('./shopListLinks.css');
+
+:root {
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
