Added name of buttons for readers

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -26,12 +26,20 @@
         class="header-slider"
       ></span
     ></label>
-    <button class="header-close-button" type="button">
+    <button
+      aria-label="Closing mobile menu icon"
+      class="header-close-button"
+      type="button"
+    >
       <svg class="header-close-icon" width="28" height="28">
         <use href="./img/icons.svg#icon-x-close"></use>
       </svg>
     </button>
-    <button class="header-open-button" type="button">
+    <button
+      aria-label="Opening mobile menu icon"
+      class="header-open-button"
+      type="button"
+    >
       <svg class="header-open-icon" width="28" height="28">
         <use href="./img/icons.svg#icon-align-left"></use>
       </svg>
