--- a/src/partials/charitableFunds.html
+++ b/src/partials/charitableFunds.html
@@ -171,7 +171,7 @@
       </li>
     </ul>
   </div>
-  <button type="button" class="charity-btn">
+  <button aria-label="Scroll button" type="button" class="charity-btn">
     <svg class="charity-btn-icon" width="20" height="20">
       <use href="./img/icons.svg#icon-angle-small-left"></use>
     </svg>
