--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -115,26 +115,17 @@
   }
 }
 
-.icon-close {
-  position: absolute;
-  top: 12px;
-  right: 12px;
-  width: 24px;
-  height: 24px;
-  cursor: pointer;
-  transition: stroke 0.3s ease;
-}
-
 .icon-close::before,
 .icon-close::after {
   content: '';
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 20px;
-  height: 2px;
+  width: 20px; 
+  height: 2px; 
   background-color: var(--main-fount-color);
   border-radius: 2px;
+  transition: width 0.3s ease, height 0.3s ease;
 }
 
 .icon-close::before {
@@ -144,6 +135,21 @@
 .icon-close::after {
   transform: translate(-50%, -50%) rotate(-45deg);
 }
+
+.icon-close:hover::before,
+.icon-close:hover::after {
+  width: 24px;
+  height: 2px;
+  background-color: var(--violet-color); 
+}
+
+.icon-close:active::before,
+.icon-close:active::after {
+  background-color: var(--violet-color);
+}
+
+
+
 
 @media screen and (min-width: 768px) {
   .modal-congratulation {
