--- a/src/css/common.css
+++ b/src/css/common.css
@@ -10,7 +10,7 @@
   --grey-filter-color: grayscale(100%);
   --invert-filter-color: brightness(0) invert(1);
   --hover-dark-filter-shadow: drop-shadow(
-    0px 3px 3px rgba(255, 255, 255, 0.35)
+    0 0 3px rgba(255, 255, 255, 1.0)
   );
   --hover-light-filter-shadow: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.35));
   --box-shadow-color: rgba(0, 0, 0, 0.25);
