--- a/src/css/basket.css
+++ b/src/css/basket.css
@@ -31,6 +31,11 @@
   display: flex;
   flex-direction: column;
 }
+/* .shList-container .tui-pagination {
+  position: fixed;
+  right: 30px;
+  bottom: 30px;
+} */
 
 .basket-list {
   display: flex;
