--- a/src/css/basket.css
+++ b/src/css/basket.css
@@ -1,15 +1,22 @@
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.header-container {
+  width: 100%;
+}
 .basket-container {
+  flex: 1;
   margin-top: 40px;
   display: flex;
 }
 .basket-container .charity-slider {
   display: none;
 }
-
 .background-container.none {
   display: none;
 }
-
 .background-container {
   margin-top: 80px;
   min-width: 375px;
@@ -19,30 +26,23 @@
   align-items: center;
   gap: 20px;
 }
-
 .empty-text {
   letter-spacing: -0.02em;
   text-align: center;
   color: var(--empty-color);
 }
-
 .shList-container {
+  flex: 1;
   max-width: 375px;
   display: flex;
   flex-direction: column;
 }
-/* .shList-container .tui-pagination {
-  position: fixed;
-  right: 30px;
-  bottom: 30px;
-} */
-
 .basket-list {
+  flex: 1;
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-
 .basket-item {
   width: 335px;
   height: 170px;
@@ -53,7 +53,6 @@
   display: flex;
   background-color: var(--item-background-color);
 }
-
 .basket-item-img {
   width: 100px;
   height: 142px;
@@ -62,21 +61,17 @@
   object-fit: cover;
   margin-right: 14px;
 }
-
 .basket-item-info {
   width: 100%;
 }
-
 .first-item-part {
   display: flex;
   justify-content: space-between;
   margin-bottom: 8px;
 }
-
 .title-category-container {
   gap: 4px;
 }
-
 .title-basket-item {
   font-weight: 700px;
   font-size: 16px;
@@ -88,7 +83,6 @@
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
 }
-
 .category-basket-item {
   height: 14px;
   overflow: hidden;
@@ -102,7 +96,6 @@
   letter-spacing: 0.03em;
   color: var(--light-gray-color);
 }
-
 .delete-basket-item-btn {
   height: 28px;
   width: 28px;
@@ -110,17 +103,14 @@
   background-color: var(--violet-color);
   border: none;
 }
-
 .delete-basket-item-btn:hover {
   filter: var(--hover-shadow);
 }
-
 .trash-btn-icon {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 .descr-basket-item {
   width: 193px;
   height: 53px;
@@ -134,7 +124,6 @@
   color: var(--title-color);
   margin-bottom: 30px;
 }
-
 .last-item-part {
   display: flex;
   flex-direction: row;
@@ -145,7 +134,6 @@
   letter-spacing: -0.04em;
   color: var(--light-gray-color);
 }
-
 .author-basket-item {
   height: 14px;
   overflow: hidden;
