--- a/src/css/bookCart.css
+++ b/src/css/bookCart.css
@@ -7,6 +7,7 @@
 @import url('./loader.css');
 @import url('./burgerMenu.css');
 @import url('./shopListLinks.css');
+@import url('./pagination.css');
 
 :root {
   font-synthesis: none;
