--- a/src/css/charitableFunds.css
+++ b/src/css/charitableFunds.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 16px;
-  width: 335px;
+  max-width: 335px;
   height: 460px;
   padding: 24px 40px;
   box-shadow: 0 10px 10px 0 rgba(245, 245, 247, 0.1);
@@ -70,7 +70,7 @@
 }
 
 .charity-btn:hover {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.55);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.55);
 }
 
 .charity-btn-icon {
