Added counter of chosen book to the cart

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,6 +18,9 @@
           </svg>
         </a>
       </li>
+      <li class="header-navigation-item">
+        <span class="header-cart-counter">0</span>
+      </li>
     </ul>
   </nav>
   <div class="header-btns-wrapper">
