Changed styles during the action hover on a category list and a book item

--- a/src/css/gallary.css
+++ b/src/css/gallary.css
@@ -4,6 +4,11 @@
 
 .selected-category-list .books-item {
   display: block;
+  transform: scale(1);
+  transition: transform 0.3s;
+}
+.selected-category-list .books-item:hover {
+  transform: scale(1.05);
 }
 
 .selected-category-list {
