--- a/src/css/navCategriesList.css
+++ b/src/css/navCategriesList.css
@@ -30,7 +30,7 @@
 .shop-navigation-list > li > button:hover {
   font-weight: 700;
   color: var(--hover-color);
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 @media screen and (min-width: 768px) {
